# i2c_rpico

./: README.md
i2c_master/: CMakeLists.txt  hello.c  load_code.sh
i2c_slave/: CMakeLists.txt  hello.c
